# FraudCallDetector

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: .gitkeep
app/src/main/cpp/whisper/: jni.c
app/src/main/java/com/frauddetector/: FraudDetectorApplication.kt  MainActivity.kt
app/src/main/java/com/frauddetector/ml/: ASRModel.kt  ClassifierModel.kt  FlanT5Classifier.kt  MiniLMClassifier.kt  ModelFactory.kt  ProcessingConfig.kt  SherpaASR.kt  SimpleTokenizer.kt  VoskASR.kt  WhisperASR.kt  WhisperLib.kt
app/src/main/java/com/frauddetector/services/: AudioManager.kt  AudioRecordManager.kt  AudioRecordingManager.kt  FraudDetectorInCallService.kt  RealtimeAnalysisService.kt
app/src/main/java/com/frauddetector/ui/: CallHistoryFragment.kt  DialerActivity.kt  InCallActivity.kt  SettingsFragment.kt
app/src/main/java/com/frauddetector/utils/: AppLogger.kt  AudioDecoder.kt  AudioDiagnostics.kt  AudioTestRunner.kt  CircularBuffer.kt  ConfidenceTracker.kt  DefaultDialerManager.kt  ModelDownloadManager.kt  NotificationHelper.kt  PermissionManager.kt
app/src/main/res/drawable/: ic_phone.xml  ic_warning.xml
app/src/main/res/layout/: activity_dialer.xml  activity_in_call.xml  activity_main.xml  fragment_call_history.xml  fragment_home.xml  fragment_settings.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
scripts/: convert_flan_t5_to_tflite.py  convert_minilm_to_onnx.py  convert_minilm_to_tflite.py  convert_minilm_to_tflite_fixed.py  download_whisper_model.sh  generate_embeddings_simple.py
